--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,5 +43,10 @@
     "vue-i18n": "9.13.1",
     "vue-router": "4.4.0",
     "zod": "3.23.8"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8"
   }
 }
