A Temu Tricks oldalon belüli kedvezmények aloldal kidolgozása. Dinamikus elemek és kártyák elkészítése. text-content megírása és az alap stílus-sémák beállítása. Komponensek kiszervezése, reactív viselkedés kezelése és adatátadások az elmúlt 2 napból.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,10 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/vue-fontawesome": "^3.0.8"
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@types/three": "^0.176.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "three": "^0.176.0"
   }
 }
